manifests/scots-lab/apps/argocd/v1_namespace_argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: argocd
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
  name: argocd
