manifests/scots-lab/apps/argocd/networking.k8s.io_v1_networkpolicy_argocd-allow-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-allow-apiserver
  namespace: argocd
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
  - Ingress
