manifests/scots-lab/apps/argocd/networking.k8s.io_v1_networkpolicy_argocd-allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-allow-internal
  namespace: argocd
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: argocd
  podSelector: {}
  policyTypes:
  - Ingress
