manifests/scots-lab/apps/argocd/networking.k8s.io_v1_networkpolicy_argocd-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-deny-all-ingress
  namespace: argocd
spec:
  ingress: []
  podSelector: {}
  policyTypes:
  - Ingress
